--- a/main.html
+++ b/main.html
@@ -3,12 +3,23 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./CSS/style.css" />
+        <link rel="stylesheet" href="./CSS/footer.css" />
         <title>Molotov | Inicio</title>
     </head>
     <body>
         <header></header>
         <main></main>
-        <footer></footer>
+        <footer>
+            <!-- <p>.</p> -->
+            <section class="icon-copyright-and-p">
+                <img class="icon-copyright" src="./img/icon_copyright.jpg" alt="Icono Copyright">
+                <p>Equipo Molotov</p>
+            </section>
+            <section>
+                <img class="icon-facebook" src="./img/icon_facebook.png" alt="Icono Facebook">
+                <img class="icon-instagram" src="./img/icon_instagram.png" alt="Icono Instagram">
+                <img class="icon-github" src="./img/icon_github.png" alt="Icono Github">
+            </section>
+        </footer>
     </body>
 </html>
