--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,16 @@
     <body>
         <header></header>
         <main></main>
-        <footer></footer>
+        <footer>
+            <section class="icon-copyright-and-p">
+                <img class="icon-copyright" src="./img/icon_copyright.jpg" alt="Icono Copyright">
+                <p>Equipo Molotov</p>
+            </section>
+            <section>
+                <img class="icon-facebook" src="./img/icon_facebook.png" alt="Icono Facebook">
+                <img class="icon-instagram" src="./img/icon_instagram.png" alt="Icono Instagram">
+                <img class="icon-github" src="./img/icon_github.png" alt="Icono Github">
+            </section>
+        </footer>
     </body>
 </html>
