added form in main and added icons in form

--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,21 @@
     </head>
     <body>
         <header></header>
-        <main></main>
+        <main>
+            <section class="form">
+                <h2>Inicia sesión</h2>
+                <input type="text" name="usuario" id="usuario" placeholder="Usuario o correo electrónico">
+                <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
+                <input type="submit" value="Iniciar sesión">
+                <p>Estoy de acuerdo con <a href="#">Terminos y condiciones</a></p>
+                <p>o regístrate con:</p>
+                <div>
+                    <img src="./img/logo-de-google.png" alt="Icono de Google">
+                    <img src="./img/logo-facebook.png" alt="Icono de Facebook">
+                    <img src="./img/icon_github.png" alt="Icono de Github">
+                </div>
+            </section>
+        </main>
         <footer>
             <section class="icon-copyright-and-p">
                 <img class="icon-copyright" src="./img/icon_copyright.jpg" alt="Icono Copyright">
