--- a/landing.html
+++ b/landing.html
@@ -11,15 +11,16 @@
         <main>
             <section class="form">
                 <h2>Inicia sesión</h2>
-                <input type="text" name="usuario" id="usuario" placeholder="Usuario o correo electrónico">
-                <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
-                <input type="submit" value="Iniciar sesión">
-                <p>Estoy de acuerdo con <a href="#">Terminos y condiciones</a></p>
+                <div class="form-user-password">                    
+                    <input class="form-input" type="text" name="usuario" id="usuario" placeholder="Usuario o correo electrónico">
+                    <input class="form-input" type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
+                    <input class="form-login" type="submit" value="Iniciar sesión">
+                </div>
                 <p>o regístrate con:</p>
-                <div>
-                    <img src="./img/logo-de-google.png" alt="Icono de Google">
-                    <img src="./img/logo-facebook.png" alt="Icono de Facebook">
-                    <img src="./img/icon_github.png" alt="Icono de Github">
+                <div class="icons-form">
+                    <img class="icons-form-google" src="./img/logo-de-google.png" alt="Icono de Google">
+                    <img class="icons-form-facebook" src="./img/logo-facebook.png" alt="Icono de Facebook">
+                    <img class="icons-form-github" src="./img/icon_github.png" alt="Icono de Github">
                 </div>
             </section>
         </main>
