Feature: added responsive header

--- a/landing.html
+++ b/landing.html
@@ -3,11 +3,27 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../CSS/style.css" />
+        <link rel="stylesheet" href="./CSS/style.css" />
         <title>Molotov | Bienvenido</title>
     </head>
     <body>
-        <header></header>
+        <header>
+            <div id="logo__section">
+                <div id="logo__wrapper">
+                    <img
+                        id="logo__image"
+                        src="assets/fire-minimalistic-svgrepo-com.svg"
+                        alt=""
+                    />
+                </div>
+                <h1>molotov</h1>
+            </div>
+            <div id="menu__section">
+                <div id="menu__wrapper">
+                    <img src="assets/menu-alt-2-svgrepo-com.svg" alt="" />
+                </div>
+            </div>
+        </header>
         <main></main>
         <footer></footer>
     </body>
