Feature: added main page structure and style.

--- a/main.html
+++ b/main.html
@@ -24,7 +24,69 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section id="banner__container">
+                <div id="banner__image__section">
+                    <img src="" alt="" />
+                    <img src="" alt="" />
+                </div>
+                <div id="banner__button__section">
+                    <button id="banner__button"></button>
+                    <button id="banner__button"></button>
+                    <button id="banner__button"></button>
+                    <button id="banner__button"></button>
+                </div>
+            </section>
+            <section id="usercard__container">
+                <article id="card__wrapper">
+                    <div id="card__image"><img src="" alt="" /></div>
+                    <div id="card__body">
+                        <h2>Nicolás Albarenque</h2>
+                        <hr />
+                        <h3>Full-stack Web Developer</h3>
+                        <h4>¿Qué palabra te describe?</h4>
+                        <p>Adaptable.</p>
+                    </div>
+                </article>
+                <article id="card__wrapper">
+                    <div id="card__image"><img src="" alt="" /></div>
+                    <div id="card__body">
+                        <h2>Carlos Uribe</h2>
+                        <hr />
+                        <h3>Full-stack Web Developer</h3>
+                        <h4>¿Qué palabra te describe?</h4>
+                        <p>Adaptable.</p>
+                    </div>
+                </article>
+            </section>
+            <nav id="tools__container">
+                <div id="button__wrapper">
+                    <a
+                        ><img src="assets/github-142-svgrepo-com.svg" alt=""
+                    /></a>
+                </div>
+                <div id="button__wrapper">
+                    <a
+                        ><img
+                            src="assets/google-drive-alt-svgrepo-com.svg"
+                            alt=""
+                    /></a>
+                </div>
+                <div id="button__wrapper">
+                    <a
+                        ><img
+                            src="assets/vs-code-logo-microsoft-svgrepo-com.svg"
+                            alt=""
+                    /></a>
+                </div>
+                <div id="button__wrapper">
+                    <a><img src="assets/figma-svgrepo-com.svg" alt="" /></a>
+                </div>
+                <div id="button__wrapper">
+                    <a><img src="assets/zoom-svgrepo-com.svg" alt="" /></a>
+                </div>
+            </nav>
+        </main>
         <footer></footer>
     </body>
 </html>
