--- a/landing.html
+++ b/landing.html
@@ -11,28 +11,80 @@
         <main>
             <section class="form">
                 <h3>Inicia sesión</h3>
-                <div class="form-user-password">                    
-                    <input class="form-input" type="text" name="usuario" id="usuario" placeholder="Usuario o correo electrónico">
-                    <input class="form-input" type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
-                    <input class="form-login" type="submit" value="Iniciar sesión">
+                <div class="form-user-password">
+                    <input
+                        class="form-input"
+                        type="text"
+                        name="usuario"
+                        id="usuario"
+                        placeholder="Usuario o correo electrónico"
+                    />
+                    <input
+                        class="form-input"
+                        type="password"
+                        name="contraseña"
+                        id="contraseña"
+                        placeholder="Contraseña"
+                    />
+                    <input
+                        class="form-login"
+                        type="submit"
+                        value="Iniciar sesión"
+                    />
                 </div>
                 <p>o regístrate con:</p>
                 <div class="icons-form">
-                    <a href="https://www.google.com/?hl=es" target="_blank"><img class="icons-form-google" src="./img/logo-de-google.png" alt="Icono de Google"></a>
-                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img class="icons-form-facebook" src="./img/logo-facebook.png" alt="Icono de Facebook"></a>
-                    <a href="https://github.com/" target="_blank"><img class="icons-form-github" src="./img/icon_github.png" alt="Icono de Github"></a>
+                    <a href="https://www.google.com/?hl=es" target="_blank"
+                        ><img
+                            class="icons-form-google"
+                            src="./img/logo-de-google.png"
+                            alt="Icono de Google"
+                    /></a>
+                    <a
+                        href="https://www.facebook.com/?locale=es_ES"
+                        target="_blank"
+                        ><img
+                            class="icons-form-facebook"
+                            src="./img/logo-facebook.png"
+                            alt="Icono de Facebook"
+                    /></a>
+                    <a href="https://github.com/" target="_blank"
+                        ><img
+                            class="icons-form-github"
+                            src="./img/icon_github.png"
+                            alt="Icono de Github"
+                    /></a>
                 </div>
             </section>
         </main>
         <footer>
             <section class="icon-copyright-and-p">
-                <img class="icon-copyright" src="./img/icon_copyright.jpg" alt="Icono Copyright">
+                <img
+                    class="icon-copyright"
+                    src="./img/icon_copyright.jpg"
+                    alt="Icono Copyright"
+                />
                 <p>Equipo Molotov</p>
             </section>
             <section>
-                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img class="icon-facebook" src="./img/icon_facebook.png" alt="Icono Facebook"></a>
-                <a href="https://www.instagram.com/" target="_blank"><img class="icon-instagram" src="./img/icon_instagram.png" alt="Icono Instagram"></a>
-                <a href="https://github.com/" target="_blank"><img class="icon-github" src="./img/icon_github.png" alt="Icono Github"></a>
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"
+                    ><img
+                        class="icon-facebook"
+                        src="./img/icon_facebook.png"
+                        alt="Icono Facebook"
+                /></a>
+                <a href="https://www.instagram.com/" target="_blank"
+                    ><img
+                        class="icon-instagram"
+                        src="./img/icon_instagram.png"
+                        alt="Icono Instagram"
+                /></a>
+                <a href="https://github.com/" target="_blank"
+                    ><img
+                        class="icon-github"
+                        src="./img/icon_github.png"
+                        alt="Icono Github"
+                /></a>
             </section>
         </footer>
     </body>
