--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
                 <h1>molotov</h1>
             </div>
             <div id="menu__section">
-                <div id="menu__wrapper">
+                <a href="index.html" id="menu__wrapper">
                     <img src="assets/menu-alt-2-svgrepo-com.svg" alt="" />
-                </div>
+                </a>
             </div>
         </header>
         <main>
@@ -39,7 +39,14 @@
             </section>
             <section id="usercard__container">
                 <article id="card__wrapper">
-                    <div id="card__image"><img src="" alt="" /></div>
+                    <div id="card__image">
+                        <div id="image__wrapper">
+                            <img
+                                src="./assets/avatar-default-svgrepo-com.svg"
+                                alt=""
+                            />
+                        </div>
+                    </div>
                     <div id="card__body">
                         <h2>Nicolás Albarenque</h2>
                         <hr />
@@ -49,7 +56,14 @@
                     </div>
                 </article>
                 <article id="card__wrapper">
-                    <div id="card__image"><img src="" alt="" /></div>
+                    <div id="card__image">
+                        <div id="image__wrapper">
+                            <img
+                                src="./assets/avatar-default-svgrepo-com.svg"
+                                alt=""
+                            />
+                        </div>
+                    </div>
                     <div id="card__body">
                         <h2>Carlos Uribe</h2>
                         <hr />
