--- a/index.html
+++ b/index.html
@@ -25,53 +25,57 @@
             </div>
         </header>
         <main>
-            <section class="form">
-                <h3>Inicia sesión</h3>
-                <div class="form-user-password">
-                    <input
-                        class="form-input"
-                        type="text"
-                        name="usuario"
-                        id="usuario"
-                        placeholder="Usuario o correo electrónico"
-                    />
-                    <input
-                        class="form-input"
-                        type="password"
-                        name="contraseña"
-                        id="contraseña"
-                        placeholder="Contraseña"
-                    />
-                    <input
-                        class="form-login"
-                        type="submit"
-                        value="Iniciar sesión"
-                    />
-                </div>
-                <p>o regístrate con:</p>
-                <div class="icons-form">
-                    <a href="https://www.google.com/?hl=es" target="_blank"
-                        ><img
-                            class="icons-form-google"
-                            src="./img/logo-de-google.png"
-                            alt="Icono de Google"
-                    /></a>
-                    <a
-                        href="https://www.facebook.com/?locale=es_ES"
-                        target="_blank"
-                        ><img
-                            class="icons-form-facebook"
-                            src="./img/logo-facebook.png"
-                            alt="Icono de Facebook"
-                    /></a>
-                    <a href="https://github.com/" target="_blank"
-                        ><img
-                            class="icons-form-github"
-                            src="./img/icon_github.png"
-                            alt="Icono de Github"
-                    /></a>
-                </div>
-            </section>
+            <div id="form__section">
+                <section class="form">
+                    <h3>Inicia sesión</h3>
+                    <div class="form-user-password">
+                        <input
+                            class="form-input"
+                            type="text"
+                            name="usuario"
+                            id="usuario"
+                            placeholder="Usuario o correo electrónico"
+                        />
+                        <input
+                            class="form-input"
+                            type="password"
+                            name="contraseña"
+                            id="contraseña"
+                            placeholder="Contraseña"
+                        />
+                        <a href="main.html">
+                            <input
+                                class="form-login"
+                                type="submit"
+                                value="Iniciar sesión"
+                            />
+                        </a>
+                    </div>
+                    <p>o regístrate con:</p>
+                    <div class="icons-form">
+                        <a href="https://www.google.com/?hl=es" target="_blank"
+                            ><img
+                                class="icons-form-google"
+                                src="./img/logo-de-google.png"
+                                alt="Icono de Google"
+                        /></a>
+                        <a
+                            href="https://www.facebook.com/?locale=es_ES"
+                            target="_blank"
+                            ><img
+                                class="icons-form-facebook"
+                                src="./img/logo-facebook.png"
+                                alt="Icono de Facebook"
+                        /></a>
+                        <a href="https://github.com/" target="_blank"
+                            ><img
+                                class="icons-form-github"
+                                src="./img/icon_github.png"
+                                alt="Icono de Github"
+                        /></a>
+                    </div>
+                </section>
+            </div>
         </main>
         <footer>
             <section class="icon-copyright-and-p">
