Fixed media links.

--- a/main.html
+++ b/main.html
@@ -111,21 +111,24 @@
                 <p>Equipo Molotov</p>
             </section>
             <section>
-                <img
-                    class="icon-facebook"
-                    src="./img/icon_facebook.png"
-                    alt="Icono Facebook"
-                />
-                <img
-                    class="icon-instagram"
-                    src="./img/icon_instagram.png"
-                    alt="Icono Instagram"
-                />
-                <img
-                    class="icon-github"
-                    src="./img/icon_github.png"
-                    alt="Icono Github"
-                />
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"
+                    ><img
+                        class="icon-facebook"
+                        src="./img/icon_facebook.png"
+                        alt="Icono Facebook"
+                /></a>
+                <a href="https://www.instagram.com/" target="_blank"
+                    ><img
+                        class="icon-instagram"
+                        src="./img/icon_instagram.png"
+                        alt="Icono Instagram"
+                /></a>
+                <a href="https://github.com/" target="_blank"
+                    ><img
+                        class="icon-github"
+                        src="./img/icon_github.png"
+                        alt="Icono Github"
+                /></a>
             </section>
         </footer>
         >>>>>>> feature/header
